# idem

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRINUTING.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
releases/: v0.1.0.md
src/idem/: IndexStore.py  config.py  index.py  index_db.py  main.py  models.py  status.py
src/idem/sql/: dirs.py  files.py  hashes.py
tests/: test_placeholder.py
